--- a/index.html
+++ b/index.html
@@ -2,59 +2,235 @@
 <html data-theme="light" lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BiKeR-ZoNe</title>
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BiKeR-ZoNe</title>
+    <!-- tailwind links -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google fonts poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <!-- tailwind custom styles -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'bike-primary-color': '#E76F51',
+                        'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+
+                    }
+                }
+            }
+        }
+    </script>
+
+    <!-- font styles -->
+    <style>
+        .font-poppins {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 
 </head>
 
-<body>
-  <!-- header section start -->
-  <header>
-    <!-- nav start -->
-    <nav>
-      <div class="navbar bg-base-100">
-        <div class="navbar-start">
-          <div class="dropdown">
-            <label tabindex="0" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-              </svg>
-            </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a>Home</a></li>
-              <li><a>Shop</a></li>
-              <li><a>News</a></li>
-              <li><a>Contact</a></li>
-            </ul>
-          </div>
-          <a class="btn btn-ghost normal-case text-xl">BikeR ZoNe</a>
-        </div>
-        <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>Shop</a></li>
-            <li><a>News</a></li>
-            <li><a>Contact</a></li>
-          </ul>
-        </div>
-        <div class="navbar-end">
-          <a class="btn btn-error">Log In</a>
-        </div>
-      </div>
-    </nav>
-    <!-- nav end -->
-  </header>
-  <!-- header section end -->
+<body class="font-poppins">
+    <!-- header section start -->
+    <header class="md:container md:mx-auto">
+        <!-- nav start -->
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="flex-1">
+                    <div class="dropdown">
+                        <label tabindex="0" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </label>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 text-base shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>News</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost normal-case text-xl lg:text-4xl">BikeR ZoNe</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu text-base menu-horizontal px-1">
+                        <li><a>Home</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>News</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <a class="btn bg-bike-primary-color text-white">Log In</a>
+                </div>
+            </div>
+        </nav>
+        <!-- nav end -->
 
-  <main>
+        <!-- Slider Section start -->
+        <div class="carousel w-full bg-bike-primary-bg lg:h-[550px]">
+            <!-- slide-1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-4 lg:p-24 gap-20">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-base  lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="/images/slider/bike1.png" class="w-[440px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- slide-2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-4 lg:p-24 gap-20">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-base lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="/images/slider/bike2.png" class="w-[440px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- slide-3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-4 lg:p-24 gap-20">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-base lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="/images/slider/bike3.png" class="w-[440px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- slide-4 -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-4 lg:p-24 gap-20">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-base  lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="/images/slider/bike4.png" class="w-[440px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+        <!-- Slider Section end -->
+    </header>
+    <!-- header section end -->
 
-  </main>
+    <!-- main section start -->
+    <main class="md:container md:mx-auto mt-20">
+        <!-- features bike start -->
+        <section class="space-y-15">
 
-  <footer></footer>
+            <h2 class="text-2xl lg:text-5xl font-semibold text-center ">Fetured Bikes In This Year</h2>
+            <p class="text-bike-primary-color text-center underline ">Best bike collection</p>
+
+            <div class="flex flex-col lg:flex-row justify-evenly mt-20 px-28">
+
+                <div class=" ">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+
+                <div class=" ">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+
+                <div class="">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- features bike end -->
+
+        <!-- Latest Bike Start -->
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-center mb-12">Latest Bikes</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-20">
+                <!-- first card -->
+                <div class="card card-compact bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-bike-primary-color uppercase">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- second card -->
+                <div class="card card-compact  bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Motorcycles & Scooters</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-bike-primary-color uppercase">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- third card -->
+                <div class="card card-compact  bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">2021 Honda CBR500R</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-bike-primary-color uppercase">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Latest Bike End -->
+    </main>
+    <!-- main section end -->
+
+
+    <footer></footer>
 </body>
 
 </html>
