--- a/index.html
+++ b/index.html
@@ -297,11 +297,84 @@
             </div>
         </section>
         <!-- happy clients Ends -->
+
+        <!-- FaQ Sections start -->
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-center mb-12">Frequently <span class="text-bike-primary-color">Ask
+                    Questions</span></h3>
+            <div class="hero ">
+                <div class="hero-content flex-col lg:flex-row lg:gap-24">
+                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg " />
+                    <div>
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                What are the most important things I should
+                                know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                How can I tell if my helmet is old and I need a
+                                new one?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow ">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FaQ Sections End -->
     </main>
     <!-- main section end -->
 
+    <!-- foooter section start -->
+    <footer class="footer p-10 bg-neutral text-neutral-content justify-around">
+        <nav>
+            <header class="footer-title">Services</header>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+            <header class="footer-title">Company</header>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+            <header class="footer-title">Social</header>
+            <div class="grid grid-col-1 gap-4">
+                <a><img class="w-36" src="images/others/android.png" alt=""></a>
+                <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+            </div>
+        </nav>
+    </footer>
+    <!-- foooter section end -->
 
-    <footer></footer>
 </body>
 
 </html>
